Converted to typescript, initial config

--- a/src/scss/base/scaffolding.scss
+++ b/src/scss/base/scaffolding.scss
@@ -19,7 +19,7 @@ ul, ol {
   // doesn't do RTL, it break a sidebar
   padding-left: 15px;
   margin-bottom: 0;
-  list-style-image: url('../shared/img/circle.svg');
+  list-style-image: url('../../shared/img/circle.svg');
 }
 
 a {
