--- a/src/scss/containers/account.scss
+++ b/src/scss/containers/account.scss
@@ -12,7 +12,7 @@
   }
 
   &.account--photo {
-    background: url(../shared/img/404/bg_404.png) no-repeat center!important;
+    background: url(../../shared/img/404/bg_404.png) no-repeat center!important;
     background-size: cover;
 
     .account__card {
