--- a/src/scss/containers/not-found.scss
+++ b/src/scss/containers/not-found.scss
@@ -3,7 +3,7 @@
   height: 100vh;
   overflow: auto;
   display: flex;
-  background: url(../shared/img/404/bg_404.png) no-repeat center;
+  background: url(../../shared/img/404/bg_404.png) no-repeat center;
   background-size: cover;
 
   button {
